change checkbox appearance

--- a/src/components/circular-progress-bar/circular-progress-bar.scss
+++ b/src/components/circular-progress-bar/circular-progress-bar.scss
@@ -17,9 +17,11 @@
     height: 100%;
 
     position: relative;
+
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 90px;
 
     @media (orientation: landscape) {
       flex-direction: row;
