--- a/src/components/circular-progress-bar/circular-progress-bar-settings/circular-progress-bar-settings.html
+++ b/src/components/circular-progress-bar/circular-progress-bar-settings/circular-progress-bar-settings.html
@@ -1,10 +1,16 @@
 <form class="circular-progress-bar__settings">
-  <input type="number" id="value" name="value" min="0" max="100" />
-  <label for="value">Value</label>
+  <div class="circular-progress-bar__value">
+    <input type="number" id="value" name="value" min="0" max="100" />
+    <label for="value">Value</label>
+  </div>
 
-  <input type="checkbox" id="animate" name="animate" value="true" />
-  <label class="toggle-label" for="animate">Animate</label>
+  <div class="circular-progress-bar__animate">
+    <input type="checkbox" id="animate" name="animate" value="true" />
+    <label class="toggle-label" for="animate">Animate</label>
+  </div>
 
-  <input type="checkbox" id="hide" name="hide" value="true" />
-  <label class="toggle-label" for="hide">Hide</label>
+  <div class="circular-progress-bar__hide">
+    <input type="checkbox" id="hide" name="hide" value="true" />
+    <label class="toggle-label" for="hide">Hide</label>
+  </div>
 </form>
