--- a/src/components/circular-progress-bar/circular-progress-bar-settings/circular-progress-bar-settings.scss
+++ b/src/components/circular-progress-bar/circular-progress-bar-settings/circular-progress-bar-settings.scss
@@ -2,7 +2,7 @@
   &__settings {
     display: flex;
     flex-direction: column;
-    gap: 6px;
+    gap: 8px;
   }
 
   &__value,
@@ -15,6 +15,9 @@
 }
 
 input[type="checkbox"] {
+  padding: 0;
+  margin: 0;
+
   display: inline-block;
   position: relative;
 
@@ -32,11 +35,13 @@ input[type="checkbox"] {
     content: "";
     width: 24px;
     height: 24px;
-    background-color: white;
-    position: absolute;
     border-radius: 100px;
+
     top: 3px;
     left: 3px;
+
+    background-color: white;
+    position: absolute;
     transition: 0.5s;
   }
 
@@ -47,5 +52,27 @@ input[type="checkbox"] {
       left: calc(100% - 3px);
       transform: translateX(-100%);
     }
+  }
+}
+
+input[type="number"] {
+  padding: 0;
+  margin: 0;
+
+  width: 50px;
+  height: 30px;
+  border-radius: 100px;
+
+  font-size: 18px;
+
+  text-align: center;
+  appearance: none;
+  outline: none;
+  border: none;
+
+  &::-webkit-inner-spin-button,
+  &::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
   }
 }
