--- a/src/components/circular-progress-bar/circular-progress-bar-settings/circular-progress-bar-settings.scss
+++ b/src/components/circular-progress-bar/circular-progress-bar-settings/circular-progress-bar-settings.scss
@@ -15,8 +15,8 @@
 }
 
 input[type="checkbox"] {
-  padding: 0;
   margin: 0;
+  padding: 0;
 
   display: inline-block;
   position: relative;
@@ -56,8 +56,8 @@ input[type="checkbox"] {
 }
 
 input[type="number"] {
-  padding: 0;
   margin: 0;
+  padding: 2px 0 0 0;
 
   width: 50px;
   height: 30px;
@@ -69,6 +69,8 @@ input[type="number"] {
   appearance: none;
   outline: none;
   border: none;
+
+  background-color: var(--base-accent-color);
 
   &::-webkit-inner-spin-button,
   &::-webkit-outer-spin-button {
