change styles a little + cleanup

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,7 @@
 :root {
   --body-background-color: #eef3f6;
-  --card-background-color: rgb(230, 162, 164);
-  --accent-color: #0c56d6;
+  --card-background-color: rgb(147, 163, 193);
+  --accent-color: #235fc6;
   --base-accent-color: #dfe6f0;
 }
 
