switch to white color

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,6 @@
 :root {
   --body-background-color: #eef3f6;
-  --card-background-color: rgb(147, 163, 193);
+  --card-background-color: white;
   --accent-color: #235fc6;
   --base-accent-color: #dfe6f0;
 }
